# caldata-web-analytics

./: .copier-answers.yml  .pre-commit-config.yaml  .yamllint  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  nightly.yml  pre-commit.yml
dbt_docs/: catalog.json  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  run_results.json
docs/: index.md  setup.md
search/: search_index.json
setup/: index.html
terraform/environments/dev/: terraform.tfvars  user-journey-dev.tfbackend
terraform/environments/prd/: main.tf  terraform.tfvars  user-journey-prd.tfbackend
transform/: .sqlfluff  .sqlfluffignore  README.md  dbt_project.yml  package-lock.yml
transform/ci/: profiles.yml
transform/macros/: _macros.yml  make_model_incremental.sql
transform/models/: _models.yml  _sources.yml  _stg_models.yml  overview.md
transform/models/marts/: _mart_models.yml  ca_cities_by_page_views.sql  last_click_sources_by_page_views.sql  mart_sankey_acp.sql  total_users_and_pageviews.sql
transform/models/marts/benefits_recommender/: mart_br_widget.sql  mart_odibr_ga.sql
transform/models/marts/engaged_ca/: ec__ca_cities_by_page_views.sql  ec__e3_total_users_and_page_views.sql  (+3 more)
transform/models/staging/: _stg_models.yml  stg_ga_statewide.sql  stg_ga_statewide_with_event_params_flattened.sql
transform/seeds/: _seeds.yml  city_county_extras.csv  click_aliases.csv
transform/tests/generic/: test_for_data_gaps.sql  test_for_ga4_data_gaps.sql  test_valid_county.sql
writing-documentation/: index.html
(+24 files in other folders)
