[tool.poetry]
name = "caldata-user-journey-tracking"
version = "0.1.0"
description = "\"User Journey Tracking\""
authors = ["DSE <aeri.shan@innovation.ca.gov>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "~9.1.3"
dbt-core = "~1.6.0"
dbt-snowflake = "~1.6.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
sqlfluff = "2.3.0"
sqlfluff-templater-dbt = "2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
